alterando comentários de lugar

--- a/Fundamentos/3 - Introdução à HTML e CSS/Dia 1 - HTML e CSS -- Estruturas de página/exercicio_course-index.html
+++ b/Fundamentos/3 - Introdução à HTML e CSS/Dia 1 - HTML e CSS -- Estruturas de página/exercicio_course-index.html
@@ -1,14 +1,3 @@
-<!--
-Para fixar - pt1
-1 - Crie uma lista das pessoas que você já fez amizade na Trybe.
-2 - Adicione uma imagem que venha de uma URL externa.
-3 - Adicione uma imagem que está no seu computador, local.
-
-Para fixar - pt2
-1 - Crie um parágrafo para cada pessoa da sua lista.
-2 - Crie um link entre a sua lista e os parágrafos de pessoas.
-3 - Crie um link para a página do Google.
--->
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
@@ -20,15 +9,20 @@ Para fixar - pt2
   <body>
     <h1>Exercícios Course</h1>
     <!-- h=título, quanto maior o número menor o tamanho -->
+    <!-- 1 - Crie uma lista das pessoas que você já fez amizade na Trybe -->
     <ol>
-      <!-- ol = Criar lista com bolinha no lado de cada nome-->
-      <!--li = serve para definir o que eu quero que fique na lista-->
+      <!-- ol = Criar lista com bolinha no lado de cada nome -->
+      <!--li = serve para definir o que eu quero que fique na lista -->
+      
+      <!-- 2 - Crie um link entre a sua lista e os parágrafos de pessoas -->
       <li><a href="#esther"> Esther </a></li>
       <li><a href="#lina"> Lina </a></li>
       <li><a href="#julio"> Julio </a></li>
       <li><a href="#moises"> Moisés </a></li>
       <li><a href="#sandra"> Sandra </a></li>
     </ol>
+    
+    <!-- 1 - Crie um parágrafo para cada pessoa da sua lista -->
 
     <p id="esther">
       Esther Esther Esther Esther Esther Esther Esther Esther Esther Esther
@@ -104,19 +98,21 @@ Para fixar - pt2
       SandraSandra Sandra Sandra Sandra SandraSandra Sandra Sandra Sandra
       SandraSandra Sandra Sandra Sandra SandraSandra Sandra
     </p>
+    <!-- 2 - Adicione uma imagem que venha de uma URL externa -->
     <img
       src="https://i.pinimg.com/736x/5e/be/1c/5ebe1c3a2f4cd4743f78588fda1408b1.jpg"
       alt="Dois cachorros da raça Schnauzer"
       width="500px"
     />
-    <!--O src serve para indicar o caminho da imagem que vou utilizar e o alt uma breve descrição do que contém na imagem-->
+    <!-- O src serve para indicar o caminho da imagem que vou utilizar e o alt uma breve descrição do que contém na imagem -->
 
+    <!-- 3 - Adicione uma imagem que está no seu computador, local -->
     <img
       src="ruffo_schnauzer.jpeg"
       alt="Ruffo schnauzer branco com seu brinquedo"
       height="400px"
     />
-
+    <!-- 3 - Crie um link para a página do Google -->
     <br><a href="https://www.google.com.br/" target="_blank">
       Visite o Google clicando aqui!</a
     >
